# WinBid-AI

./: README.md
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_parse_result_tables.py  0003_add_document_chunks.py  0004_add_evidences_and_source_links.py  0005_plan_solve.py  0006_chat_memory.py  0007_project_memory.py  0008_multi_agent_runtime.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: bid_agent.py  checklist.py  compliance.py  drafts.py  export.py  health.py  materials.py  parse.py  parse_results.py  projects.py  tender_documents.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  domain.py
backend/app/schemas/: bid_agent.py  checklist.py  common.py  compliance.py  draft.py  export.py  material.py  parse.py  project.py  source_document.py
backend/app/services/: agent_stream_service.py  bid_project_agent_service.py  chat_agent_service.py  checklist_service.py  compliance_service.py  document_parse_service.py  draft_service.py  llm_draft_service.py  material_service.py  multi_agent_service.py  orchestrator_service.py  parse_result_service.py  plan_and_solve_service.py  project_memory_service.py  project_service.py  source_document_service.py
backend/app/web/: index.html
backend/docs/: api-definition.md  bid-project-agent-mvp.md
backend/winbid_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+2 files in other folders)
